# altspu_schedule_bot

./: Dockerfile  README.md  docker-compose.yaml  handlers.py  main.py  pyproject.toml  shedule_parser.py  views.py
.github/workflows/: main.yml
